--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -7918,12 +7918,12 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "iJ_y3nibLq4w",
-        "outputId": "d6e4566c-81ab-4a54-ac69-396327751e48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        }
+        },
+        "id": "iJ_y3nibLq4w",
+        "outputId": "d6e4566c-81ab-4a54-ac69-396327751e48"
       },
       "execution_count": 8,
       "outputs": [
@@ -7949,11 +7949,11 @@
         "y_pred_train"
       ],
       "metadata": {
-        "id": "Dg6gGPYsL0PE",
-        "outputId": "6b23ac17-ec1a-432b-916c-f33ecf2d7786",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dg6gGPYsL0PE",
+        "outputId": "6b23ac17-ec1a-432b-916c-f33ecf2d7786"
       },
       "execution_count": 9,
       "outputs": [
@@ -8043,11 +8043,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "6_HrQk4qMnHW",
-        "outputId": "b04af19e-4974-44e0-8fb1-74f9ce2dc41c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6_HrQk4qMnHW",
+        "outputId": "b04af19e-4974-44e0-8fb1-74f9ce2dc41c"
       },
       "execution_count": 12,
       "outputs": [
@@ -8074,12 +8074,12 @@
         "fig.tight_layout()"
       ],
       "metadata": {
-        "id": "50qergSYNOOn",
-        "outputId": "f6e8d5bd-05c2-4a2e-d923-2d6bb4279e82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "50qergSYNOOn",
+        "outputId": "f6e8d5bd-05c2-4a2e-d923-2d6bb4279e82"
       },
       "execution_count": 13,
       "outputs": [
@@ -8129,11 +8129,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "uqQeUgO3Oyr2",
-        "outputId": "8d2430cf-5dae-4d39-93c7-e95426233140",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uqQeUgO3Oyr2",
+        "outputId": "8d2430cf-5dae-4d39-93c7-e95426233140"
       },
       "execution_count": 15,
       "outputs": [
@@ -8166,12 +8166,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "2eFH76e9PXYT",
-        "outputId": "d3748e34-c13e-48f0-fe2b-3af35ee55b4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "2eFH76e9PXYT",
+        "outputId": "d3748e34-c13e-48f0-fe2b-3af35ee55b4d"
       },
       "execution_count": 16,
       "outputs": [
@@ -8392,6 +8392,189 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# CROSS VALIDATION"
+      ],
+      "metadata": {
+        "id": "5FKFVJQbRK2r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se utiliza el parámetro de puntuación como herramienta de evaluación del modelo, la validación cruzada. Este proceso busca evaluar la calidad de la predicción del mismo."
+      ],
+      "metadata": {
+        "id": "Sm1EaXHxSEMZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import make_scorer\n",
+        "scoring = {'accuracy': make_scorer(accuracy_score),\n",
+        "           'prec': 'precision'}"
+      ],
+      "metadata": {
+        "id": "BElkrVI2TkDk"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "source": [
+        "from sklearn.model_selection import cross_validate\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.svm import LinearSVC # import LinearSVC\n",
+        "# A sample toy binary classification dataset\n",
+        "X, y = datasets.make_classification(n_classes=2, random_state=0)\n",
+        "svm = LinearSVC(random_state=0)\n",
+        "def confusion_matrix_scorer(clf, X, y):\n",
+        "     y_pred = clf.predict(X)\n",
+        "     cm = confusion_matrix(y, y_pred)\n",
+        "     return {'tn': cm[0, 0], 'fp': cm[0, 1],\n",
+        "             'fn': cm[1, 0], 'tp': cm[1, 1]}\n",
+        "cv_results = cross_validate(svm, X, y, cv=5,\n",
+        "                            scoring=confusion_matrix_scorer)\n",
+        "# Getting the test set true positive scores\n",
+        "print(cv_results['test_tp'])\n",
+        "# Getting the test set false negative scores\n",
+        "print(cv_results['test_fn'])"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "ONQrsbgATt3Y",
+        "outputId": "3e962241-4b0f-4dfb-91ec-6be789ae8910",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10  9  8  7  8]\n",
+            "[0 1 2 3 2]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Puntuación de precisión"
+      ],
+      "metadata": {
+        "id": "gmnXV_AXVIwi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La accuracy_scorefunción calcula la precisión , ya sea la fracción (predeterminado) o el recuento (normalizar=Falso) de predicciones correctas.\n",
+        "\n",
+        "En la clasificación de múltiples etiquetas, la función devuelve la precisión del subconjunto. Si todo el conjunto de etiquetas predichas para una muestra coincide estrictamente con el conjunto real de etiquetas, la precisión del subconjunto es 1,0; de lo contrario, es 0,0."
+      ],
+      "metadata": {
+        "id": "K3b8MMQ7UIfP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "y_pred = [0, 2, 1, 3]\n",
+        "y_true = [0, 1, 2, 3]\n",
+        "accuracy_score(y_true, y_pred)\n",
+        "accuracy_score(y_true, y_pred, normalize=False)"
+      ],
+      "metadata": {
+        "id": "ygo8ylWXUVlD",
+        "outputId": "78b915e1-7c49-4d8d-9265-69af766135bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La predicción se considera correcta siempre que la etiqueta verdadera esté asociada con una de las kpuntuaciones predichas más altas."
+      ],
+      "metadata": {
+        "id": "nAfpdc70VTpq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.metrics import top_k_accuracy_score\n",
+        "y_true = np.array([0, 1, 2, 2])\n",
+        "y_score = np.array([[0.5, 0.2, 0.2],\n",
+        "                    [0.3, 0.4, 0.2],\n",
+        "                    [0.2, 0.4, 0.3],\n",
+        "                    [0.7, 0.2, 0.1]])\n",
+        "top_k_accuracy_score(y_true, y_score, k=2)\n",
+        "# Not normalizing gives the number of \"correctly\" classified samples\n",
+        "top_k_accuracy_score(y_true, y_score, k=2, normalize=False)"
+      ],
+      "metadata": {
+        "id": "4RdW_zKMUj50",
+        "outputId": "dc34e146-7ca9-4821-897a-8363e21d07df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# CONCLUSIONES Y RECOMENDACIONES"
       ],
       "metadata": {
@@ -8422,7 +8605,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPn4YRGKCX7/daFCSs04DX",
+      "authorship_tag": "ABX9TyPrGp+qt8udNlK+cKrcqIqQ",
       "include_colab_link": true
     },
     "kernelspec": {
