--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -8299,6 +8299,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Modelo de Precisión de KNN"
+      ],
+      "metadata": {
+        "id": "r1t4jn5DZu-i"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -8605,7 +8614,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMz8WS3zoRRcVugAcMRsLrE",
+      "authorship_tag": "ABX9TyOtFpLKMXaCyk3fu6IQH5S0",
       "include_colab_link": true
     },
     "kernelspec": {
