--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -8410,7 +8410,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se utiliza el parámetro de puntuación como herramienta de evaluación del modelo, la validación cruzada. Este proceso busca evaluar la calidad de la predicción del mismo."
+        "Se utiliza el parámetro de puntuación como herramienta de evaluación del modelo, la validación cruzada. Este proceso busca evaluar la calidad de la predicción del mismo, por medio de la repetición k veces utilizndo un grupo distinto com ovalidadción de iteración. Esto genera k estimaciones del error, cuyo promedio se emplea para la estimación final.\n"
       ],
       "metadata": {
         "id": "Sm1EaXHxSEMZ"
@@ -8614,7 +8614,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtFpLKMXaCyk3fu6IQH5S0",
+      "authorship_tag": "ABX9TyPYSwlG1Ey7EFD37QczAbi1",
       "include_colab_link": true
     },
     "kernelspec": {
