Se creó con Colab

--- a/DataScienceIII_CortezSchall.ipynb
+++ b/DataScienceIII_CortezSchall.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/DrKpq+mF4IHLlk1ZQtuW",
+      "authorship_tag": "ABX9TyMw4BkoIbt4LKUlfy0LcpAw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **DATA SCIENCE III: NLP Y DEEP LEARNING APLICADO A LA CIENCIA DE DATOS - Sentiment Analysis**\n",
+        "# **DATA SCIENCE III: NLP Y DEEP LEARNING APLICADO A LA CIENCIA DE DATOS**\n",
+        "\n",
+        "**A 20 años del iNNotec: visualizando las relaciones, encuentros y desencuentros entre Ciencia, Tecnología, Negocios y Estado**\n",
         "\n"
       ],
       "metadata": {
@@ -203,6 +205,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## **Lectura del corpus**"
+      ],
+      "metadata": {
+        "id": "OHrgcMYsmirp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Carga de datos**"
       ],
       "metadata": {
@@ -299,15 +310,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## **Lectura del corpus**"
-      ],
-      "metadata": {
-        "id": "OHrgcMYsmirp"
-      }
     },
     {
       "cell_type": "code",
@@ -584,10 +586,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**N-grams**"
+        "**Análisis de N-gramas**"
       ],
       "metadata": {
-        "id": "lt5d2pUzfj7G"
+        "id": "kfSRoRLrq7ls"
       }
     },
     {
@@ -1549,33 +1551,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Análisis de la Distribución de Longitud de Palabras**"
-      ],
-      "metadata": {
-        "id": "ImJPC5Ymo5X4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Distribución de la Frecuencia de Palabras**"
-      ],
-      "metadata": {
-        "id": "N-AUpsbTqvVE"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Análisis de N-gramas**"
-      ],
-      "metadata": {
-        "id": "kfSRoRLrq7ls"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "**Análisis de la Diversidad Léxica**"
       ],
       "metadata": {
@@ -1798,6 +1773,24 @@
       "metadata": {
         "id": "udkFVq-MttGt"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Aplicación con un modelo BoW y uno TF-IDF**"
+      ],
+      "metadata": {
+        "id": "n5fi5gWNmzUA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9cQbusghm2TM"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
