Se creó con Colab

--- a/DataScienceIII_CortezSchall.ipynb
+++ b/DataScienceIII_CortezSchall.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMw4BkoIbt4LKUlfy0LcpAw",
+      "authorship_tag": "ABX9TyPhxI4uJ+KMUjbQHzqzBPq/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "# **DATA SCIENCE III: NLP Y DEEP LEARNING APLICADO A LA CIENCIA DE DATOS**\n",
         "\n",
-        "**A 20 años del iNNotec: visualizando las relaciones, encuentros y desencuentros entre Ciencia, Tecnología, Negocios y Estado**\n",
+        "**Análisis a 20 años del iNNotec: visualizando las relaciones, encuentros y desencuentros entre Ciencia, Tecnología, Negocios y Estado**\n",
         "\n"
       ],
       "metadata": {
@@ -59,13 +59,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Abstracto con Motivación y Audiencia\n",
+        "**Abstracto**\n",
         "\n",
-        "Contexto Comercial y Analítico\n",
+        "En 2004, el IAPG (Instituto Argentino del Petróleo y el Gas) y la SPE de Argentina (capítulo local de la Society Of Petroleum Engineers), organizaron el iNNotec: 1er Expo-Congreso de Innovación Tecnológica en Energía y Petroquímica. A 20 años del evento es menester analizar el avance en las relaciones, encuentros y desencuentros entre Ciencia, Tecnología, Negocios y Estado\n",
         "\n",
-        "Preguntas/Hipótesis a Resolver\n",
+        "**Contexto Comercial y Analítico**\n",
         "\n",
-        "Objetivo"
+        "El contexto socio económico contempla la necesidad sobre la vinculación de los procesos entre la triple hélice: Estado-Empresas.Instituciones Científicas, para el efectivo desarrollo sostenible de una región.\n",
+        "\n",
+        "**Preguntas/Hipótesis a Resolver**\n",
+        "\n",
+        "Cuál es el avance social y económico a partir del iNNotec?\n",
+        "\n",
+        "**Objetivo**\n",
+        "\n",
+        "Analizar el impacto del iNNotec a lo largo de 20 años de consenso.\n"
       ],
       "metadata": {
         "id": "dItLUymjliTK"
