Se creó con Colab

--- a/DataScienceIII_CortezSchall.ipynb
+++ b/DataScienceIII_CortezSchall.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxgHt1IR+oQnELsJqaRdAM",
+      "authorship_tag": "ABX9TyOMlmEwIi+nL9jc8lUEVt/U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1015,7 +1015,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Definir una frase de ejemplo\n",
+        "# Definir una frase\n",
         "sentence = \"el dilema del subdesarrollo: en un país desarrollado, a una empresa que no invierte en innovar le puede costar muy caro\"\n",
         "\n",
         "# Procesar la frase\n",
@@ -1350,83 +1350,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ROOT: Verbo principal de la oración que no tiene un \"head\" o palabra principal a la que se adjunte.\n",
+        "VERB: Verbo principal: Invierte, innovar y costar.\n",
         "\n",
-        "acl: Cláusula adjetival; modificador de una palabra que normalmente actúa como un nombre.\n",
+        "ADJ: Cláusula adjetival: caro, desarrollado.\n",
         "\n",
-        "acomp: Complemento adjetivo; un adjetivo que modifica directamente a un sustantivo.\n",
+        "ADV: Complemento adjetivo; un adjetivo que modifica directamente a un sustantivo: muy, no,\n",
         "\n",
-        "advcl: Cláusula adverbial; cláusula subordinada que actúa como un adverbio dentro de la oración.\n",
+        "ADP: Cláusula adverbial: en, a, del.\n",
         "\n",
-        "advmod: Modificador adverbial; un adverbio que modifica a un verbo, adjetivo u otro adverbio.\n",
+        "DET: Modificador adverbial: el, un, una.\n",
         "\n",
-        "agent: Agente; el agente de una acción (solo en pasivas).\n",
+        "AUX: Auxiliar: puede.\n",
         "\n",
-        "amod: Modificador adjetivo; un adjetivo que modifica directamente a un sustantivo.\n",
+        "NOUN: Sustantivo: dilema, subdesarrollo, país, empresa.\n",
         "\n",
-        "appos: Aposición; un sustantivo, pronombre o frase nominal que sigue inmediatamente a otro sustantivo y lo explica o aclara.\n",
-        "\n",
-        "attr: Atributo; un predicado nominal que se aplica a un sustantivo.\n",
-        "\n",
-        "aux: Auxiliar; un verbo auxiliar.\n",
-        "\n",
-        "case: Marcador de caso; una preposición o postposición marcando la relación de caso.\n",
-        "\n",
-        "cc: Coordinating conjunction; una conjunción coordinada.\n",
-        "\n",
-        "ccomp: Complemento verbal; un complemento verbal o cláusula que sigue a un verbo, marcando su argumento.\n",
-        "\n",
-        "compound: Compuesto de palabras; una palabra compuesta de dos o más palabras.\n",
-        "\n",
-        "conj: Conjunción; una conjunción coordinante o subordinante.\n",
-        "\n",
-        "cop: Copulativo; un verbo copulativo (como \"ser\" o \"estar\").\n",
-        "\n",
-        "csubj: Sujeto clausal; un sujeto que es una cláusula.\n",
-        "\n",
-        "dep: Dependiente; una palabra que es dependiente de otra y que no se ajusta a ninguna de las otras relaciones.\n",
-        "\n",
-        "det: Determinante; un determinante.\n",
-        "\n",
-        "discourse: Discurso; elemento de discurso.\n",
-        "\n",
-        "expl: Expletivo; un pronombre expletivo.\n",
-        "\n",
-        "fixed: Fijo; un modificador o parte de un compuesto que está fijo en su lugar.\n",
-        "\n",
-        "flat: Plano; un modificador que no tiene hijos en el árbol de dependencias.\n",
-        "\n",
-        "goeswith: Va con; usado in unión con una palabra separada por un espacio.\n",
-        "\n",
-        "iobj: Objeto indirecto; un objeto indirecto.\n",
-        "\n",
-        "list: Lista; elementos de una lista.\n",
-        "\n",
-        "mark: Marcador; una palabra o partícula que introduce una cláusula subordinada.\n",
-        "\n",
-        "nmod: Modificador nominal; un modificador de un sustantivo.\n",
-        "\n",
-        "nsubj: Sujeto nominal; el sujeto de un verbo.\n",
-        "\n",
-        "nummod: Modificador numérico; un modificador de un número.\n",
-        "\n",
-        "obj: Objeto directo; un objeto directo.\n",
-        "\n",
-        "obl: Obligatorio; un modificador que indica un papel obligatorio o adverbio.\n",
-        "\n",
-        "orphan: Huérfano; un dep.\n",
-        "\n",
-        "parataxis: Parataxis; elementos en paralelo a la sintaxis.\n",
-        "\n",
-        "punct: Puntuación; un signo de puntuación.\n",
-        "\n",
-        "reparandum: Reparandum; palabras reparables.\n",
-        "\n",
-        "root: Raíz; el nodo raíz del árbol de dependencias.\n",
-        "\n",
-        "vocative: Vocativo; una frase que se dirige a la persona a la que se está dirigiendo.\n",
-        "\n",
-        "xcomp: Complemento extendido; un complemento cuyo argumento es una cláusula."
+        "PRON: que, le."
       ],
       "metadata": {
         "id": "KhLuBw9glw-N"
