Se creó con Colab

--- a/DataScienceIII_CortezSchall.ipynb
+++ b/DataScienceIII_CortezSchall.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMlmEwIi+nL9jc8lUEVt/U",
+      "authorship_tag": "ABX9TyPX0fqeiDARqtijq7Loxtbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1444,6 +1444,117 @@
       ],
       "metadata": {
         "id": "udkFVq-MttGt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Abstracto**"
+      ],
+      "metadata": {
+        "id": "rHisNRE2-yjr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El trabajo busca analizar la recopilación de comentarios variados de diez juegos distintos. El objetivo principal es entrenar un modelo de Procesamiento de Lenguaje Natural con el fin de clasificar los comentarios como positivos o negativos."
+      ],
+      "metadata": {
+        "id": "8hxCSX_9-3Gt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Contexto**"
+      ],
+      "metadata": {
+        "id": "8YclmEYx_gks"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EL dataset busca ayudar a mejorar la comprensión y clasificación de comentarios en el ámbito de los videojuegos, lo que a su vez podría tener aplicaciones en la industria del gaming, como la generación de estrategias de marketing más efectivas y la toma de decisiones basada en el feedback de los usuarios."
+      ],
+      "metadata": {
+        "id": "6izBkusK_nAa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Objetivos**"
+      ],
+      "metadata": {
+        "id": "l6zxOMw1_ji9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El objetivo principal de este proyecto es desarrollar un modelo de deep learning que pueda clasificar los comentarios en positivos y negativos. Además, se busca comparar el rendimiento de diferentes arquitecturas de redes neuronales, desde modelos simples hasta modelos más complejos, evaluando cómo cada modificación impacta en la precisión y generalización del modelo."
+      ],
+      "metadata": {
+        "id": "lQAJBNY__3k_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import kagglehub\n",
+        "\n",
+        "# Download latest version\n",
+        "path = kagglehub.dataset_download(\"giottomillan/reviews-videogames\")\n",
+        "\n",
+        "print(\"Path to dataset files:\", path)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wQ9rxmLL-kSM",
+        "outputId": "267b1f64-750d-4b04-8e97-e6f9f91625ba"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/giottomillan/reviews-videogames?dataset_version_number=1...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 2.28M/2.28M [00:00<00:00, 122MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting files...\n",
+            "Path to dataset files: /root/.cache/kagglehub/datasets/giottomillan/reviews-videogames/versions/1\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "rhg-pvxv-v_u"
       }
     },
     {
