Se creó con Colab

--- a/DataScienceIII_CortezSchall.ipynb
+++ b/DataScienceIII_CortezSchall.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPX0fqeiDARqtijq7Loxtbt",
+      "authorship_tag": "ABX9TyMgHrMEwsVylyTAb1/LYRsV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1506,7 +1506,7 @@
         "import kagglehub\n",
         "\n",
         "# Download latest version\n",
-        "path = kagglehub.dataset_download(\"giottomillan/reviews-videogames\")\n",
+        "df = kagglehub.dataset_download(\"giottomillan/reviews-videogames\")\n",
         "\n",
         "print(\"Path to dataset files:\", path)"
       ],
@@ -1515,37 +1515,94 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wQ9rxmLL-kSM",
-        "outputId": "267b1f64-750d-4b04-8e97-e6f9f91625ba"
+        "outputId": "eef54c75-bcbd-4bba-eefa-e6cd1e842171"
       },
-      "execution_count": 94,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/giottomillan/reviews-videogames?dataset_version_number=1...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 2.28M/2.28M [00:00<00:00, 122MB/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting files...\n",
             "Path to dataset files: /root/.cache/kagglehub/datasets/giottomillan/reviews-videogames/versions/1\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset con reseñas\n",
+        "data = {\n",
+        "    'reseña': [\n",
+        "    \"10 febrero actualmente recomiendo juego contaba requisitos necesarios poder jugarlo llevado disgusto...\",\n",
+        "    \"9 febrero increíblemente gracioso ver cómo cdpr después catástrofe cyberpunk 2077 esfuerza cada vez ...\",\n",
+        "    \"el mundo en este juego es extremadamente estático casi no hay interacción que puedas hacer el npc ai es algo\",\n",
+        "    \"cero rejugabilidad terminé este juego en cerca de 100 horas y más o menos 100ed el juego después de eso\",\n",
+        "    \"horribleeste es el peor fifa que he jugado la mecanica es tan mala no malgastes tu dinero\",\n",
+        "    \"15 enero el ea anticheat hace que el juego no se inicie o no guarde tus progresos cuando\",\n",
+        "    \"9 abril jugado fifa 19 21 22 antelacion puedo decir peor launcher concha atomica optimizaron microon\",\n",
+        "    \"muchos bugs juego online lento\",\n",
+        "    \"arruinó el juego con actualizaciones constantes de las que ya se encarga la comunidad de modding\",\n",
+        "    \"muuuy aburrido\",\n",
+        "    \"producto reembolsado juego anda 120 fps estables ultra resolucion 1360x1280 putridos quince minutos\",\n",
+        "    \"creo que es un buen paso para el pc de la vieja gen a la nueva sin embargo fut gameplay es hella lento y clunk\",\n",
+        "    \"esperad ver hacen pobre rendimiento pronto compréis salvo pc muuuy superior requisitos recomendados\",\n",
+        "    \"juego pasa bueno bugfix hotfix fix parche anterior parche rompe sigueque pida procesador potente phe\",\n",
+        "    \"querida empresa ea puede compensar a todos por este tiempo y dinero yo represento la voz de cada usuario\",\n",
+        "    \"13 febrero optimicen parches jugable recomiendo verguenza usuarios requisitos superiores pide ande m...\",\n",
+        "    \"pagado por el juego y ni siquiera se inicia patético realmente ea son un caos no compre esto es happenin.\",\n",
+        "    \"13 febrero siemprebuen juego pesimo rendimientoya pirata ver si actualizan quitan denuvo mejorar ren..\",\n",
+        "    \"pagado por el juego y ni siquiera se inicia patético realmente ea son un caos no compre esto es happenin.\",\n",
+        "    \"simplificar mi reviewive tenía tantos errores de ruptura de juego en mi tiempo de juego que mi guardar ahora no es playa..\",\n",
+        "    \"7 enero encima juego garcha crashea mitad partidos anticheat verga pusieron apaga pcmorite ea concha\",\n",
+        "    \"la historia es genial pero los gamesystems son apenas carne a cabo errores gráficos socavar la historia todo\",\n",
+        "    \"corto y fácil de entender no compre esto\",\n",
+        "    \"buen juego rendimiento flojete esperemos arreglen base parches si lleva negativo pleno 2022 from sof.\",\n",
+        "    \"no te equivoques skyrim es un gran juego donde te divertiras mucho pero no puedo recomendar\",\n",
+        "    \"actualice driver 2060 funcionara mejor arreglo problema hacen esperar 10 minutos optimizacion eviden\",\n",
+        "    \"despues de comprar la ultimate edition y tener problemas con el early access he solucionado el problema de lanzamiento\",\n",
+        "    \"3 marzo primeras horas geniales cinemática inicial soprendió giro animaciones detalle thestrals lleg..\",\n",
+        "    \"bella manera de una actualización no arreglar cualquier problema sólo añadir cosas que la gente utiliza para obtener 4 gratis o\"\n",
+        "    ],\n",
+        "\n",
+        "    'clasificacion': [1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0,\n",
+        "                      1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame\n"
+      ],
+      "metadata": {
+        "id": "Da3R_Ln6Ip_U"
+      },
+      "execution_count": 118,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Separar características (reseña) y objetivo (clasificacion)\n",
+        "X = df['reseña']\n",
+        "y = df['clasificacion']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
         },
+        "id": "IWX5CO_bMt8c",
+        "outputId": "1418c88b-d7e0-4b4b-fc08-d613b9a557d3"
+      },
+      "execution_count": 119,
+      "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'type' object is not subscriptable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-119-961a1b470d56>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Separar características (reseña) y objetivo (clasificacion)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'reseña'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'clasificacion'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'type' object is not subscriptable"
           ]
         }
       ]
