Se creó con Colab

--- a/DataScienceIII_CortezSchall.ipynb
+++ b/DataScienceIII_CortezSchall.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmzK5oSXjScxDkyo8qZQ5V",
+      "authorship_tag": "ABX9TyM5BGUUUX/mWuzFD0Cwv/Jp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,12 +225,10 @@
       "source": [
         "\n",
         "\n",
-        "# ... (your existing code to fetch and extract text) ...\n",
-        "\n",
-        "# Download the 'punkt_tab' data package\n",
+        "# Download'punkt_tab'\n",
         "nltk.download('punkt_tab')\n",
         "\n",
-        "# Apply word tokenization\n",
+        "# tokenización de palabras\n",
         "tokenized_palabra = word_tokenize(texto_relevante)\n",
         "print(tokenized_palabra)"
       ],
